# battle-monsters

./: .env  Cargo.toml  README.md  docker-postgres.yaml
migrations/2023-10-27-143039_create_monsters/: down.sql  up.sql
migrations/2023-10-27-143047_create_battles/: down.sql  up.sql
migrations/2024-05-10-235228_add_monsters_name/: down.sql  up.sql
src/: main.rs
src/api/: battle_apis.rs  config.rs  mod.rs  monster_apis.rs
src/models/: battle.rs  mod.rs  monster.rs
src/repository/: battle_repository.rs  database.rs  mod.rs  monster_repository.rs  schema.rs
src/utils/: test_utils.rs
src/utils/files/: monsters-empty-monster.csv
