[package]
name = "assessment-cc-rust-sr-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }
csv = "1.1"
actix-multipart = "0.6.1"
futures = "0.3.29"
tempfile = "3.8.1"
actix-rt = "2.9.0"
serde_json = "1.0.108"


[dev-dependencies]
actix-multipart-test = "0.0.3"